fix psr-4 namespace

--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,6 @@
     "type": "library",
     "require": {},
     "autoload": {
-        "psr-4": {"betrhealth\\IntercomAppBuilder\\": "src/"}
+        "psr-4": {"cosmastech\\IntercomAppBuilder\\": "src/"}
     }
 }
