--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "cosmastech/intercom-app-builder",
     "description": "Components for creating Intercom inbox/messenger apps.",
+    "version":"0.0.1",
     "type": "library",
     "require": {},
     "minimum-stability": "stable",
