--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "version":"0.0.1",
     "type": "library",
     "require": {
-        "php": ">=7.4"
+        "php": ">=7.4",
+        "spatie/data-transfer-object": "^2.8"
     },
     "minimum-stability": "stable",
     "autoload": {
